Remove dependance on std::pair

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@ PROG2=example2
 OBJDIR=.obj
 CC=g++
 
-CFLAGS = -Wall --std=c++14 -I ..
+CFLAGS = -Wall -std=c++14 -I ..
 
 $(shell mkdir -p $(OBJDIR)) 
 
